tests/paczka1/fuzzy1/87719948.err
Error in line 8: YZi0kY S734 9,5
Error in line 5: jytvTAL S454 86,6
Error in line 18: iSypy S183 97,6
Error in line 23: S454 S183 28,4
Error in line 30: Oty9sQE3p0 S425 9,5
